--- a/public/choices.html
+++ b/public/choices.html
@@ -9,8 +9,8 @@
     </head>
     <body>
         <h1 id="title">Choose 1</h1>
-        <button id="choice1" class="inputs">Choice 1</button>
-        <button id="choice2" class="inputs">Choice 2</button>
+        <input type="image" id="choice1" src="shuffle_bite_back2.png" />
+        <input type="image" id="choice2" src="shuffle_bite_back2.png" />
         <button id="random" class="inputs">Can't decide?</button>
         
         <script type="module" src="utils.js"></script>
