--- a/public/final_choice.html
+++ b/public/final_choice.html
@@ -8,7 +8,8 @@
         <link rel="fontsheet" href="https://fonts.googleapis.com/css?family=Concert+One" />
     </head>
     <body>
-        <div id="container"></div>
+        <img src="shuffle_bite_blank2.png" alt="restaurant-info" />
+        <div id="container" class="final" position="absolute"></div>
         
         <script type="module" src="utils.js"></script>
         <script type="module" src="final_choice_script.js?v=1.0.0"></script>
