--- a/public/choices.html
+++ b/public/choices.html
@@ -8,7 +8,7 @@
         <link rel="fontsheet" href="https://fonts.googleapis.com/css?family=Concert+One" />
     </head>
     <body>
-        <h1 id="title">Choose 1</h1>
+        <h1 id="title">Choose One</h1>
         <input type="image" id="choice1" src="shuffle_bite_back2.png" />
         <input type="image" id="choice2" src="shuffle_bite_back2.png" />
         <button id="random" class="inputs">Can't decide?</button>
